Added empty case

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				if (amountSpaceStart === someString.length) {    //Если строка состоит только из пробелов
 					console.log('Строка состоит только из пробелов');
-					return someString;
+					return "";
 				} 
 
 				let amountSpaceEnd = 0;                        //Подсчет пробелов в конце
