Did extra ex with palindroms

--- a/hw1/N03.html
+++ b/hw1/N03.html
@@ -30,7 +30,7 @@
 			//console.log(surname, name, patronymic);
 
 			do {
-				var age = parseInt(prompt('Введите Ваш возраст в годах:'));
+				let age = parseInt(prompt('Введите Ваш возраст в годах:'));
 			} while (isNaN(age));
 
 			let male = confirm('Ваш пол мужской? Если да, то нажмите \'OK\', если нет \u2014 то \'Отмена\'');
