--- a/hw1/Add.html
+++ b/hw1/Add.html
@@ -19,6 +19,39 @@
 			let userString = prompt('Введите строку');
 			
 			let cutSpace = (someString) => {
+				if (someString === ""){               //Проверка на пустую строку
+					console.log('Строка пуста');
+					return someString;
+				} 
+
+				let amountSpaceStart = 0;                             //Подсчет пробелов в начале
+				for (let i = 0; someString.charAt(i) === " "; i++) {
+					amountSpaceStart += 1;
+				}
+
+				if (amountSpaceStart === someString.length) {    //Если строка состоит только из пробелов
+					console.log('Строка состоит только из пробелов');
+					return "";
+				} 
+
+				let amountSpaceEnd = 0;                        //Подсчет пробелов в конце
+				for (let i = someString.length - 1; someString.charAt(i) === " "; i--) {
+					amountSpaceEnd += 1;
+				}
+
+				if (amountSpaceStart === 0 && amountSpaceEnd === 0) {    //Если пробелов нет
+					console.log('Пробелы в начале и в конце отсутствуют');
+					return someString;
+				}
+
+				someString = someString.slice(amountSpaceStart, someString.length - amountSpaceEnd); //Обрезка
+				return someString;
+			}
+			alert(`*${cutSpace(userString)}*`);
+
+			/*let userString = prompt('Введите строку');
+			
+			let cutSpace = (someString) => {
 				let amountSpaceStart = 0;
 				for (let i = 0; someString.charAt(i) === " "; i++) {
 					amountSpaceStart += 1;
@@ -32,7 +65,7 @@
 				someString = someString.slice(amountSpaceStart, someString.length - amountSpaceEnd);
 				return someString;
 			}
-			alert(`*${cutSpace(userString)}*`);
+			alert(`*${cutSpace(userString)}*`);*/
 			
 			/*let countSpaceStart = (someString) => {
 				let amountSpaceStart = 0;
