--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 				if ( str.includes(' ') ) {  //Для удаления пробелов
 					str = str.replace(/\s+/g, '');
-					console.log(str);
+					//console.log(str);
 				}
 
 				if (str.length <= 1){
@@ -35,20 +35,20 @@
 
 				let punctuation = /[\u2000-\u206F\u2E00-\u2E7F\\'!"#$%&()*+,\-.\/:;<=>?@\[\]^_`{|}~]/g;
 				str = str.replace(punctuation,"");  //Не смогла вынести в отдельный if. Для удаления знаков препинания
-				console.log(str);
+				//console.log(str);
 
 				if ( str.includes('ь') ) {  //Для удаления ь
 					str = str.replace(/\ь+/g, '');
-					console.log(str);
+					//console.log(str);
 				}
 				if ( str.includes('ъ') ) {  //Для удаления ъ
 					str = str.replace(/\ъ+/g, '');
-					console.log(str);
+					//console.log(str);
 				}
 
 				if ( str.includes('ё') ) {  //Для нивелирования разницы е и ё
 					str = str.replace(/\ё+/g, 'е');
-					console.log(str);
+					//console.log(str);
 				}
 
 				let strStart = str[0];
