--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Base JS Add HW1</title>
+		<title>Base JS Base HW2 N07</title>
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 		<meta name="HandheldFriendly" content="True"/> <!--В некоторых случаях смартфоны автоматически изменяют масштаб страницы, лучше эту возможность отключать-->
 		<!-- saved from url=(0014)about:internet -->
@@ -16,35 +16,36 @@
 
 			'use strict'
 			
-			/*let userArr = [ 5,7,[4,[2],8,[1,3], 2],[9,[]],1,8];
-			let treeSum = (arr) => {
-				let newArr = arr.join(',').split(',');
-				console.log(newArr);
+			let userStr = prompt('Введите строку');
+
+			/*let countVowels = (str) => {
+				str = str.toLowerCase();
 				let sum = 0;
-				for (let i = 0; i < newArr.length; i++) {
-					sum += (+ newArr[i]);	
+
+				for (let i = 0; i < str.length; i++) {
+					if (str[i] === 'ё' || str[i] === 'у' || str[i] === 'е' || str[i] === 'ы' || str[i] === 'а' || str[i] === 'о' || str[i] === 'э' || str[i] === 'я' || str[i] === 'и' || str[i] === 'ю') {
+						sum += 1;
+					}
 				}
+
+				return sum;
+			}*/
+
+			let countVowels = (str) => {
+				str = str.toLowerCase();
+				let vowelArr = ['ё','у','е','ы','а','о','э','я','и','ю'];
+				let sum = 0;
+
+				for (let i = 0; i < str.length; i++) {
+					if  (vowelArr.includes(str[i]) ) {
+						sum += 1;
+					}
+				}
+
 				return sum;
 			}
 
-			console.log(treeSum(userArr));*/
-
-			let userArr = [5,7,[4,[2],8,[1,3], 2],[9,[]],1,8];
-
-			let treeSum = (arr) => {
-				let sum = 0;
-				for (let i = 0; i < arr.length; i++) {
-					/*if ( !Array.isArray(arr[i]) ) {
-						sum += arr[i];
-					} else {
-						sum += treeSum(arr[i]);
-					}*/
-					( Array.isArray(arr[i]) )? (sum += treeSum(arr[i])) : (sum += arr[i]);
-				}
-				return sum;
-			}
-
-			console.log(treeSum(userArr));
+			console.log(countVowels(userStr));
 			
 		</script>
 
