Added new option in comment

--- a/hw2/N05.html
+++ b/hw2/N05.html
@@ -21,7 +21,7 @@
 				let newArr = arr.join(',').split(',');
 				console.log(newArr);
 				let sum = 0;
-				for (let i = 0; i < newArr.length; i++) {   //for (let i of newArr) {
+				for (let i = 0; i < newArr.length; i++) {   //for (let i of newArr) или newArr.reduce
 					sum += (+ i);	
 				}
 					sum += (+ newArr[i]);	
