--- a/hw2/N05.html
+++ b/hw2/N05.html
@@ -15,38 +15,59 @@
 		<script>
 
 			'use strict'
+
+			let userArr = [ 5,7,[4,[2],8,[1,3], 2],[9,[]],1,8];
+
+			let treeSum = (arr) => {
+				let newArr = arr.flat(Infinity);
+				let result = newArr.reduce( (sum, current) => sum + current, 0);
+				return result;
+			}
+
+			console.log(treeSum(userArr));
 			
 			/*let userArr = [ 5,7,[4,[2],8,[1,3], 2],[9,[]],1,8];
 			let treeSum = (arr) => {
 				let newArr = arr.join(',').split(',');
-				console.log(newArr);
+				//console.log(newArr);
 				let sum = 0;
-				for (let i = 0; i < newArr.length; i++) {   //for (let i of newArr) или newArr.reduce
-					sum += (+ i);	
-				}
+				for (let i = 0; i < newArr.length; i++) {   //for (let i of newArr) или newArr.reduce или flat();
 					sum += (+ newArr[i]);	
+				}
+						
+				return sum;
+			}
+
+			console.log(treeSum(userArr));*/
+
+			/*let userArr = [5,7,[4,[2],8,[1,3], 2],[9,[]],1,8];
+
+			let treeSum = (arr) => {
+				let sum = 0;
+				for (let i = 0; i < arr.length; i++) {
+					/*if ( !Array.isArray(arr[i]) ) { 
+						sum += arr[i];
+					} else {
+						sum += treeSum(arr[i]);
+					}*/ /*
+					( Array.isArray(arr[i]) )? (sum += treeSum(arr[i])) : (sum += arr[i]);
 				}
 				return sum;
 			}
 
 			console.log(treeSum(userArr));*/
 
-			let userArr = [5,7,[4,[2],8,[1,3], 2],[9,[]],1,8];
+			/*let userArr = [5,7,[4,[2],8,[1,3], 2],[9,[]],1,8];
 
 			let treeSum = (arr) => {
 				let sum = 0;
-				for (let i = 0; i < arr.length; i++) {
-					/*if ( !Array.isArray(arr[i]) ) {
-						sum += arr[i];
-					} else {
-						sum += treeSum(arr[i]);
-					}*/
-					( Array.isArray(arr[i]) )? (sum += treeSum(arr[i])) : (sum += arr[i]);
+                for (let i of arr) {
+					( Array.isArray(i) ) ? (sum += treeSum(i)) : (sum += i);
 				}
 				return sum;
 			}
 
-			console.log(treeSum(userArr));
+			console.log(treeSum(userArr));*/
 			
 		</script>
 
