Added extra hw B6 and new extra hw C

--- a/hw1/N03.html
+++ b/hw1/N03.html
@@ -46,6 +46,8 @@
 					pension = 'нет';
 				}
 			}
+			/*let pensLimit = male ? 63 : 65;
+			let pens = (age > pensLimit) ? "да" : "нет";*/
 
 			let ageDays = age * 365;
 			let ageAfter = age + 5;
