Added array branch

--- a/index.html
+++ b/index.html
@@ -27,23 +27,25 @@
 					return false;
 				}
 
-				let keysInput1 = ( Array.isArray(input1) ) ? input1 : Object.keys(input1);
-				let keysInput2 = ( Array.isArray(input2) ) ? input2 : Object.keys(input2);
-
-				if (keysInput1.length !== keysInput2.length) {
-					return false;
-				}
-
 				if ( Array.isArray(input1) && Array.isArray(input2) ) {
-					for (let i = 0; i < keysInput1.length; i++) {
-						if ( keysInput1[i] !== keysInput2[i]) {
-							return deepComp(keysInput1[i], keysInput2[i]);
+					if (input1.length !== input2.length) {
+						return false;
+					}
+					for (let i = 0; i < input1.length; i++) {
+						if ( input1[i] !== input2[i]) {
+							return deepComp(input1[i], input2[i]);
 						}
 					}
 					return true;
-				} else {				
+				} else {	
+					let keysInput1 = ( Array.isArray(input1) ) ? input1 : Object.keys(input1);
+					let keysInput2 = ( Array.isArray(input2) ) ? input2 : Object.keys(input2);
+
+					if (keysInput1.length !== keysInput2.length) {
+						return false;
+					}
 					for (let i = 0; i < keysInput1.length; i++) {
-						if ( !keysInput2.includes(keysInput1[i]) || !keysInput1.includes(keysInput2[i])) {
+						if ( !keysInput2.includes(keysInput1[i]) || !keysInput1.includes(keysInput2[i]) ) {
 							return false;
 						}
 						if ( input1[ keysInput1[i] ] !== input2[ keysInput1[i] ] ) {
